--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/NeoHub.png" />
+    <link rel="icon" type="image/svg+xml" href="/frontend/src/assets/NeoHub.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neo Hub</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
